Resources/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: replaceme
  labels:
    app: replaceme
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: replaceme
    spec:
      containers:
      - name: replaceme
        image: replaceme
        ports:
        - containerPort: 8080
