Resources/pod-detailed-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: replaceme
  labels:
    app: replaceme
spec:
  containers:
   - name: changeme
     image: changeme
     ports:
      - containerPort: 8080
        name: http
        protocol: TCP
        
     resources:
       requests:
         cpu: "500m"
         memory: "128Mi"
       limits:
         cpu: "1000m"
         memory: "256Mi"
         
     livenessProbe:
       httpGet:
         path: /healthy
         port: 8080
       initialDelaySeconds: 5
       timeoutSeconds: 1
       periodSeconds: 10
       failureThreshold: 3
     readinessProbe:
       httpGet:
         path: /ready
         port: 8080
       periodSeconds: 2
       initialDelaySeconds: 0
       failureThreshold: 3
       successThreshold: 1  
---
