Resources/pod-localvol-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: replaceme
  labels:
    app: replaceme
spec:
  volumes:
   - name: data
     hostPath:
       path: "/data"
       
  containers:
   - name: changeme
     image: changeme
     ports:
      - containerPort: 8080
        name: http
        protocol: TCP
     volumeMounts:
      - mountPath: /data
        name: data
---
