Resources/pod-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: replaceme
  labels:
    app: replaceme
spec:
  containers:
   - name: changeme
     image: changeme
     ports:
      - containerPort: 8080
        name: http
        protocol: TCP
---
