Resources/service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: replaceme
  labels:
    app: replaceme
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: replaceme
---
